--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
       <header>
         <!--ma photo en petit cliquable pour l'agrandire-->
-        <a  href="../mon-CV/image/ma_photo.jpg"><img  src="../mon-CV/image/ma_photo_petit.jpg" class="image"  alt="ma photo" title="ma photo"></a>
+        <a  href="image/ma_photo.jpg"><img  src="image/ma_photo_petit.jpg" class="image"  alt="ma photo" title="ma photo"></a>
         
         <h1 class="dev">Rakotoson theo</h1>
         
