--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
             <h2>Mon expérience</h2>
         </div>
         <div class="content">
-            <li>COLLÈGE JOLIOT CURIE, Technicien informatique</li>
-            <li>HUAWEI, agent promotion</li>
-            <li>Pro SAV 3, Agent de maintenance </li>
+            <ul>
+                <li>COLLÈGE JOLIOT CURIE, Technicien informatique</li>
+                <li>HUAWEI, agent promotion</li>
+                <li>Pro SAV 3, Agent de maintenance </li>
+            </ul>
         </div>
     </section>
 
@@ -33,21 +35,25 @@
                 <div class="heading2">
                     <h4>hardware</h4>
                 </div>
-            <li >Réparation informatique et multimédia (HI FI, PC, électroménager)</li>
-            <li>Suivi des stocks de pièces et organes de rechange(réparation moteur, carte électronique, etc..)</li>
-            <li>Dépannage d’urgence de matériel industriel chez le client, Identification, analyse et diagnostic des réparations</li>
-            <li>Maitrise de l'impression 3D et de l'Arduino</li>
+                <ul>
+                    <li>Réparation informatique et multimédia (HI FI, PC, électroménager)</li>
+                    <li>Suivi des stocks de pièces et organes de rechange(réparation moteur, carte électronique, etc..)</li>
+                    <li>Dépannage d’urgence de matériel industriel chez le client, Identification, analyse et diagnostic des réparations</li>
+                    <li>Maitrise de l'impression 3D et de l'Arduino</li>
+                </ul>
             </div>
             <div class="software">
                 <div class="heading2">
                     <h4>software</h4>
                 </div>
-                <li>Initié au c++, Visual basic, python, lua, batch, HTML, CSS</li>
-                <li>Notion phpMyAdmin</li>
-                <li>Initié a VMware</li>
-                <li>Bonne connaissance des environnements Windows & linux</li>
-                <li>Gestion parc informatique (~150 pc)</li>
-                <li>Gestion réseaux</li>
+                <ul>
+                    <li>Initié au c++, Visual basic, python, lua, batch, HTML, CSS</li>
+                    <li>Notion phpMyAdmin</li>
+                    <li>Initié a VMware</li>
+                    <li>Bonne connaissance des environnements Windows & linux</li>
+                    <li>Gestion parc informatique (~150 pc)</li>
+                    <li>Gestion réseaux</li>
+                </ul>
             </div>
         </div>
 
@@ -58,20 +64,22 @@
             <h2>Super Smash Bros</h2>
         </div>
         <div class="contentsmash">
-            <li>Meilleur Ganondorf du monde(non)</li>
+            <p>Meilleur Ganondorf du monde(non)</p>
         </div>
 
     </section>
 
     <section class="formation">
         <div class="heading">
-            <h2>Ma formation</h2>
+            <h2>Mes formations</h2>
         </div>
         <div class="content">
-            <li>OPENCLASSROOM, développeur web</li>
-            <li>PÔLE FORMATION ADPS, médiateur numérique </li>
-            <li>LYCEE LA SALLE, BEP Electrotechnique</li>
-            <li>CFAI DE L'AUBE, BAC Maintenance industrielle</li>
+            <ul>
+                <li>OPENCLASSROOM, développeur web</li>
+                <li>PÔLE FORMATION ADPS, médiateur numérique </li>
+                <li>LYCEE LA SALLE, BEP Electrotechnique</li>
+                <li>CFAI DE L'AUBE, BAC Maintenance industrielle</li>
+            </ul>
         </div>
 
     </section>
