modification footer + hard/soft

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
     </section>
     
     <footer>
-        <p class="link" >Voici mon <a  href="https://www.linkedin.com/in/rakotoson-théo">linkedin!</a></p>
+        <a  href="https://www.linkedin.com/in/rakotoson-théo"><img src="image/linkedin.png" class="link" alt="linkedin" title="linkedin"></img></a>
+        <a  href="https://github.com/mastertoson"><img src="image/github.png" class="link" alt="github" title="github"></img></a>
     </footer>
 </body>
 </html>
