--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <a  href="image/ma_photo.jpg"><img  src="image/ma_photo_petit.jpg" class="image"  alt="ma photo" title="ma photo"></a>
         <h1 class="nom">Rakotoson theo</h1>
-        <h3 class="dev">développeur web</h3>
+        <p class="dev">développeur web</p>
     </header>
 
     <section class="experience">
