ON A BIEN AVANCEE

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <a  href="image/ma_photo.jpg"><img  src="image/ma_photo_petit.jpg" class="image"  alt="ma photo" title="ma photo"></a>
-        <h1 class="nom">Rakotoson theo</h1>
-        <p class="dev">développeur web</p>
+        <h1 class="nom">Rakotoson Theo</h1>
+        <p class="dev">Développeur Web Junior</p>
     </header>
 
     <section class="experience">
@@ -33,7 +33,7 @@
         <div class="content grid" >
             <div class="hardware">
                 <div class="heading2">
-                    <h4>hardware</h4>
+                    <h4>Hardware</h4>
                 </div>
                 <ul>
                     <li>Réparation informatique et multimédia (HI FI, PC, électroménager)</li>
@@ -44,7 +44,7 @@
             </div>
             <div class="software">
                 <div class="heading2">
-                    <h4>software</h4>
+                    <h4>Software</h4>
                 </div>
                 <ul>
                     <li>Initié au c++, Visual basic, python, lua, batch, HTML, CSS</li>
@@ -87,8 +87,12 @@
     </section>
     
     <footer>
-        <a  href="https://www.linkedin.com/in/rakotoson-théo"><img src="image/linkedin.png" class="link" alt="linkedin" title="linkedin"></img></a>
-        <a  href="https://github.com/mastertoson"><img src="image/github.png" class="link" alt="github" title="github"></img></a>
+        <div class="reseaux">
+        <a  href="https://www.linkedin.com/in/rakotoson-théo" target="_blank"><img src="image/linkedin.png" class="link" alt="linkedin" title="linkedin"></img></a>
+        <a  href="https://github.com/mastertoson" target="_blank"><img src="image/github.png" class="link" alt="github" title="github"></img></a>
+        <a  href="https://openclassrooms.com/fr/paths/185-developpeur-web" target="_blank"><img src="image/Openclassroom.png" class="link" alt="Openclassroom" title="Ma formation!"></img></a>
+        </div>
+        <p class="copyright">Copyright by MasterToson</p>
     </footer>
 </body>
 </html>
