VA T'IL AFFICHER CETTE IMAGE ??

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
     
     <footer>
         <div class="reseaux">
-        <a  href="https://www.linkedin.com/in/rakotoson-théo" target="_blank"><img src="image/linkedin.png" class="link" alt="linkedin" title="linkedin"></img></a>
-        <a  href="https://github.com/mastertoson" target="_blank"><img src="image/github.png" class="link" alt="github" title="github"></img></a>
-        <a  href="https://openclassrooms.com/fr/paths/185-developpeur-web" target="_blank"><img src="image/Openclassroom.png" class="link" alt="Openclassroom" title="Ma formation!"></img></a>
+        <a  href="https://www.linkedin.com/in/rakotoson-théo" target="_blank"><img src="image/linkedin.png" class="link" alt="linkedin" title="linkedin"/></a>
+        <a  href="https://github.com/mastertoson" target="_blank"><img src="image/github.png" class="link" alt="github" title="github"/></a>
+        <a  href="https://openclassrooms.com/fr/paths/185-developpeur-web" target="_blank"><img src="image/Openclassroom.png" class="link" alt="Openclassroom" title="Ma formation!"/></a>
         </div>
         <p class="copyright">Copyright by MasterToson</p>
     </footer>
