--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css" media="screen and (max-with: 1280px">
+    <link rel="stylesheet" href="CSS/style.css" media="screen and (max-with: 400px">
     <title>Mon cv</title>
 </head>
 <body>
@@ -92,7 +94,9 @@
         <a  href="https://github.com/mastertoson" target="_blank"><img src="image/github.png" class="link" alt="github" title="github"/></a>
         <a  href="https://openclassrooms.com/fr/paths/185-developpeur-web" target="_blank"><img src="image/Openclassroom.png" class="link" alt="Openclassroom" title="Ma formation!"/></a>
         </div>
-        <p class="copyright">Copyright by MasterToson</p>
+        <div class="copyright">
+        <p>Copyright by MasterToson</p>
+        </div>
     </footer>
 </body>
 </html>
