--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <section class="experience">
         <div class="heading">
-            <h2>Mon expérience</h2>
+            <h2 id="ex">Mon expérience</h2>
         </div>
         <div class="content">
             <ul>
