--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/style.css" media="screen and (max-with: 1280px">
-    <link rel="stylesheet" href="CSS/style.css" media="screen and (max-with: 400px">
+    <link rel="stylesheet" href="CSS/style.css" media="screen and (max-with: 1280px)">
+    <link rel="stylesheet" href="CSS/style.css" media="screen and (max-with: 400px)">
+    <link rel="stylesheet" href="CSS/style.css" media="screen and (max-with: 300px)>
     <title>Mon cv</title>
 </head>
 <body>
