--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/style.css" media="screen and (max-with: 1280px)">
     <link rel="stylesheet" href="CSS/style.css" media="screen and (max-with: 400px)">
-    <link rel="stylesheet" href="CSS/style.css" media="screen and (max-with: 300px)>
+    <link rel="stylesheet" href="CSS/style.css" media="screen and (max-with: 300px)">
     <title>Mon cv</title>
 </head>
 <body>
