test integration facebook

--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- style -->
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/style.css" media="screen and (max-with: 1280px)">
     <link rel="stylesheet" href="CSS/style.css" media="screen and (max-with: 400px)">
     <link rel="stylesheet" href="CSS/style.css" media="screen and (max-with: 300px)">
+    <!-- facebook -->
+    <meta property="og:title" content="CV Rakotoson théo"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="mastertoson.github.io/mon-CV/"/>
+    <meta property="og:image" content="image/ma_photo.jpg"/>
+    <meta property="og:description" content="Voici mon CV"/>
     <title>Mon cv</title>
 </head>
 <body>
