--- a/index.html
+++ b/index.html
@@ -1,110 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- style -->
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/style.css" media="screen and (max-with: 1280px)">
-    <link rel="stylesheet" href="CSS/style.css" media="screen and (max-with: 400px)">
-    <link rel="stylesheet" href="CSS/style.css" media="screen and (max-with: 300px)">
-    <!-- facebook -->
-    <meta property="og:title" content="CV Rakotoson théo"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:url" content="mastertoson.github.io/mon-CV/"/>
-    <meta property="og:image" content="image/ma_photo.jpg"/>
-    <meta property="og:description" content="Voici mon CV"/>
-    <title>Mon cv</title>
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mon cv</title>
+  <!-- style -->
+  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="CSS/style.css" media="screen and (max-with: 1280px)">
+  <link rel="stylesheet" href="CSS/style.css" media="screen and (max-with: 400px)">
+  <link rel="stylesheet" href="CSS/style.css" media="screen and (max-with: 300px)">
+  <!-- facebook -->
+  <meta property="og:title" content="CV Rakotoson théo" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="mastertoson.github.io/mon-CV/" />
+  <meta property="og:image" content="image/ma_photo.jpg" />
+  <meta property="og:description" content="Voici mon CV" />
+
 </head>
+
 <body>
-    <header>
-        <a  href="image/ma_photo.jpg"><img  src="image/ma_photo_petit.jpg" class="image"  alt="ma photo" title="ma photo"></a>
-        <h1 class="nom">Rakotoson Theo</h1>
-        <p class="dev">Développeur Web Junior</p>
-    </header>
+  <header>
+    <a href="image/ma_photo.jpg"><img src="image/ma_photo_petit.jpg" class="image" alt="ma photo" title="ma photo"></a>
+    <h1 class="nom">Rakotoson Theo</h1>
+    <p class="dev">Développeur Web Junior</p>
+  </header>
 
-    <section class="experience">
-        <div class="heading">
-            <h2 id="ex">Mon expérience</h2>
-        </div>
-        <div class="content">
-            <ul>
-                <li>COLLÈGE JOLIOT CURIE, Technicien informatique</li>
-                <li>HUAWEI, agent promotion</li>
-                <li>Pro SAV 3, Agent de maintenance </li>
-            </ul>
-        </div>
-    </section>
+  <section class="experience">
+    <div class="heading">
+      <h2 id="ex">Mon expérience</h2>
+    </div>
+    <div class="content">
+      <ul>
+        <li>COLLÈGE JOLIOT CURIE, Technicien informatique</li>
+        <li>HUAWEI, agent promotion</li>
+        <li>Pro SAV 3, Agent de maintenance </li>
+      </ul>
+    </div>
+  </section>
 
-    <section class="competences">
-        <div class="heading">
-            <h2>Mes compétences</h2>
+  <section class="competences">
+    <div class="heading">
+      <h2>Mes compétences</h2>
+    </div>
+    <div class="content grid">
+      <div class="hardware">
+        <div class="heading2">
+          <h4>Hardware</h4>
         </div>
-        <div class="content grid" >
-            <div class="hardware">
-                <div class="heading2">
-                    <h4>Hardware</h4>
-                </div>
-                <ul>
-                    <li>Réparation informatique et multimédia (HI FI, PC, électroménager)</li>
-                    <li>Suivi des stocks de pièces et organes de rechange(réparation moteur, carte électronique, etc..)</li>
-                    <li>Dépannage d’urgence de matériel industriel chez le client, Identification, analyse et diagnostic des réparations</li>
-                    <li>Maitrise de l'impression 3D et de l'Arduino</li>
-                </ul>
-            </div>
-            <div class="software">
-                <div class="heading2">
-                    <h4>Software</h4>
-                </div>
-                <ul>
-                    <li>Initié au c++, Visual basic, python, lua, batch, HTML, CSS</li>
-                    <li>Notion phpMyAdmin</li>
-                    <li>Initié a VMware</li>
-                    <li>Bonne connaissance des environnements Windows & linux</li>
-                    <li>Gestion parc informatique (~150 pc)</li>
-                    <li>Gestion réseaux</li>
-                </ul>
-            </div>
+        <ul>
+          <li>Réparation informatique et multimédia (HI FI, PC, électroménager)</li>
+          <li>Suivi des stocks de pièces et organes de rechange(réparation moteur, carte électronique, etc..)</li>
+          <li>Dépannage d’urgence de matériel industriel chez le client, Identification, analyse et diagnostic des
+            réparations</li>
+          <li>Maitrise de l'impression 3D et de l'Arduino</li>
+        </ul>
+      </div>
+      <div class="software">
+        <div class="heading2">
+          <h4>Software</h4>
         </div>
+        <ul>
+          <li>Initié au c++, Visual basic, python, lua, batch, HTML, CSS</li>
+          <li>Notion phpMyAdmin</li>
+          <li>Initié a VMware</li>
+          <li>Bonne connaissance des environnements Windows & linux</li>
+          <li>Gestion parc informatique (~150 pc)</li>
+          <li>Gestion réseaux</li>
+        </ul>
+      </div>
+    </div>
 
-    </section >
+  </section>
 
-    <section class="smash">
-        <div class="headingsmash">
-            <br>
-            <h2>Super Smash Bros</h2>
-        </div>
-        <div class="contentsmash">
-            
-            <p>Meilleur Ganondorf du monde(non)</p>
-        </div>
+  <section class="smash">
+    <div class="headingsmash">
+      <br>
+      <h2>Super Smash Bros</h2>
+    </div>
+    <div class="contentsmash">
 
-    </section>
+      <p>Meilleur Ganondorf du monde(non)</p>
+    </div>
 
-    <section class="formation">
-        <div class="heading">
-            <h2>Mes formations</h2>
-        </div>
-        <div class="content">
-            <ul>
-                <li>OPENCLASSROOM, développeur web</li>
-                <li>PÔLE FORMATION ADPS, médiateur numérique </li>
-                <li>LYCEE LA SALLE, BEP Electrotechnique</li>
-                <li>CFAI DE L'AUBE, BAC Maintenance industrielle</li>
-            </ul>
-        </div>
+  </section>
 
-    </section>
-    
-    <footer>
-        <div class="reseaux">
-        <a  href="https://www.linkedin.com/in/rakotoson-théo" target="_blank"><img src="image/linkedin.png" class="link" alt="linkedin" title="linkedin"/></a>
-        <a  href="https://github.com/mastertoson" target="_blank"><img src="image/github.png" class="link" alt="github" title="github"/></a>
-        <a  href="https://openclassrooms.com/fr/paths/185-developpeur-web" target="_blank"><img src="image/Openclassroom.png" class="link" alt="Openclassroom" title="Ma formation!"/></a>
-        </div>
-        <div class="copyright">
-        <p>Copyright by MasterToson</p>
-        </div>
-    </footer>
+  <section class="formation">
+    <div class="heading">
+      <h2>Mes formations</h2>
+    </div>
+    <div class="content">
+      <ul>
+        <li>OPENCLASSROOM, développeur web</li>
+        <li>PÔLE FORMATION ADPS, médiateur numérique </li>
+        <li>LYCEE LA SALLE, BEP Electrotechnique</li>
+        <li>CFAI DE L'AUBE, BAC Maintenance industrielle</li>
+      </ul>
+    </div>
+
+  </section>
+
+  <footer>
+    <div class="reseaux">
+      <a href="https://www.linkedin.com/in/rakotoson-théo" target="_blank"><img src="image/linkedin.png" class="link"
+          alt="linkedin" title="linkedin" /></a>
+      <a href="https://github.com/mastertoson" target="_blank"><img src="image/github.png" class="link" alt="github"
+          title="github" /></a>
+      <a href="https://openclassrooms.com/fr/paths/185-developpeur-web" target="_blank"><img
+          src="image/Openclassroom.png" class="link" alt="Openclassroom" title="Ma formation!" /></a>
+    </div>
+    <div class="copyright">
+      <p>Copyright by MasterToson</p>
+    </div>
+  </footer>
 </body>
+
 </html>
